# Cliphist-Gui

./: .gitignore  Cargo.toml  README.md  install.sh  update.sh
.github/workflows/: ci.yml  release.yml
src/: config.default  main.rs  style.css
src/cliphist/: Cargo.toml  app.rs  config.default  config.rs  entries.rs  main.rs  ui.rs
src/common/: Cargo.toml  cli.rs  config.rs  css.rs  keys.rs  layer.rs  lib.rs  logging.rs  paths.rs  vim.rs
src/launcher/: Cargo.toml  app.rs  calc.rs  config.default  config.rs  desktop.rs  main.rs  search.rs  style.css  ui.rs
src/themes/: catppuccin.css  dracula.css  material-3.css  material-you.css  monokai.css  onedark.css
